--- a/src/style/Words/WordsForm.css
+++ b/src/style/Words/WordsForm.css
@@ -20,5 +20,5 @@
   font-size: 3rem;
   outline: none;
   border: none;  
-  border-bottom: 1px solid #c5f6fa;
+  border-bottom: 1px solid goldenrod;
 }
