--- a/src/style/Learn/LearnTemplate.css
+++ b/src/style/Learn/LearnTemplate.css
@@ -6,20 +6,25 @@
   margin-top: 1rem;
 }
 
-.title {
+.learn-template .title {
   padding: 1rem;
   font-size: 2.5rem;
   text-align: center;
   font-weight: 100;
-  background: #22b8cf;;
+  background: lightcoral;
   color: white;
 }
 
-.select-wrapper, .form-wrapper {
+.learn-template .select-wrapper {
   padding: 1rem;
-  border-bottom: 1px solid #22b8cf;
+  border-bottom: 1px solid lightcoral;
 }
 
-.learn-wrapper {
+.learn-template .form-wrapper {
+  padding: 1rem;
+  border-bottom: 1px solid lightcoral;
+}
+
+.learn-template .learn-wrapper {
   min-height: 5rem;
 }
