modified to adapt mobile screen and fixed some bugs

--- a/src/style/Learn/LearnSelect.css
+++ b/src/style/Learn/LearnSelect.css
@@ -16,12 +16,12 @@
   width: 35%;  
 }
 
-.selectBtn.btn-group-vertical .btn.startBtn{
+.btn-group-vertical .btn.startBtn{
   background-color: dodgerblue !important;
   border-color: dodgerblue !important;
 }
 
-.selectBtn.btn-group-vertical .btn.stopBtn{
+.btn-group-vertical .btn.stopBtn{
   background-color: brown !important;
   border-color: brown !important;
 }
