--- a/src/style/Learn/LearnTemplate.css
+++ b/src/style/Learn/LearnTemplate.css
@@ -1,27 +1,26 @@
 .learn-template {
   background: white;
-  width: 512px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23); /* 그림자 */ 
-  margin: 0 auto; /* 페이지 중앙 정렬 */
+  width: 90%;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  margin: 0 auto; 
   margin-top: 1rem;
 }
 
 .learn-template .title {
-  padding: 1rem;
-  font-size: 2.5rem;
+  padding: 0.5rem;
+  font-size: 1.5rem;
   text-align: center;
-  font-weight: 100;
   background: lightcoral;
   color: white;
 }
 
 .learn-template .select-wrapper {
-  padding: 1rem;
+  padding: 0.5rem;
   border-bottom: 1px solid lightcoral;
 }
 
 .learn-template .form-wrapper {
-  padding: 1rem;
+  padding: 0.5rem;
   border-bottom: 1px solid lightcoral;
 }
 
