--- a/src/style/Search/SearchTemplate.css
+++ b/src/style/Search/SearchTemplate.css
@@ -1,23 +1,22 @@
 .search-template {
-  background: white;
-  width: 512px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23); /* 그림자 */ 
-  margin: 0 auto; /* 페이지 중앙 정렬 */
+  background: white;  
+  width: 90%;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23); 
+  margin: 0 auto; 
   margin-top: 1rem;
 }
 
 .search-template .title {
-  padding: 1rem;
-  font-size: 2.5rem;
+  padding: 0.5rem;
+  font-size: 1.5rem;
   text-align: center;
-  font-weight: 100;
-  background: #22b8cf;;
+  background: #2b92d6;
   color: white;
 }
 
 .search-template .form-wrapper {
   padding: 1rem;
-  border-bottom: 1px solid #22b8cf;
+  border-bottom: 1px solid #2b92d6;
 }
 
 .search-template .search-wrapper {
